backend/ANTLR/networkLevelMonitoring/NetworkParser.py
# Generated from Network.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NetworkParser ( Parser ):

    grammarFileName = "Network.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'s='", "','", "'sp='", "'d='", "'dp='", 
                     "'fc='", "'ec='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'|'", "'&'", "<INVALID>", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", 
                     "<INVALID>", "'on'", "'off'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PROTOCOL", "ACTION", "IPSUBNET", "OPERATOR", "OR", 
                      "AND", "EQ", "NEQ", "G", "L", "GEQ", "LEQ", "ADD", 
                      "SUB", "MUL", "DIV", "BOOL", "TRUE", "FALSE", "INT", 
                      "ID", "DOUBLE", "WS", "COMMENT", "IP", "PV" ]

    RULE_masterRule = 0
    RULE_option = 1
    RULE_s = 2
    RULE_sp = 3
    RULE_d = 4
    RULE_dp = 5
    RULE_fc = 6
    RULE_ec = 7

    ruleNames =  [ "masterRule", "option", "s", "sp", "d", "dp", "fc", "ec" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    PROTOCOL=8
    ACTION=9
    IPSUBNET=10
    OPERATOR=11
    OR=12
    AND=13
    EQ=14
    NEQ=15
    G=16
    L=17
    GEQ=18
    LEQ=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    BOOL=24
    TRUE=25
    FALSE=26
    INT=27
    ID=28
    DOUBLE=29
    WS=30
    COMMENT=31
    IP=32
    PV=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MasterRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROTOCOL(self):
            return self.getToken(NetworkParser.PROTOCOL, 0)

        def ACTION(self):
            return self.getToken(NetworkParser.ACTION, 0)

        def option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NetworkParser.OptionContext)
            else:
                return self.getTypedRuleContext(NetworkParser.OptionContext,i)


        def getRuleIndex(self):
            return NetworkParser.RULE_masterRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMasterRule" ):
                listener.enterMasterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMasterRule" ):
                listener.exitMasterRule(self)




    def masterRule(self):

        localctx = NetworkParser.MasterRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_masterRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(NetworkParser.PROTOCOL)
            self.state = 17
            self.match(NetworkParser.ACTION)
            self.state = 19 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 18
                self.option()
                self.state = 21 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 250) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self):
            return self.getTypedRuleContext(NetworkParser.SContext,0)


        def sp(self):
            return self.getTypedRuleContext(NetworkParser.SpContext,0)


        def d(self):
            return self.getTypedRuleContext(NetworkParser.DContext,0)


        def dp(self):
            return self.getTypedRuleContext(NetworkParser.DpContext,0)


        def fc(self):
            return self.getTypedRuleContext(NetworkParser.FcContext,0)


        def ec(self):
            return self.getTypedRuleContext(NetworkParser.EcContext,0)


        def getRuleIndex(self):
            return NetworkParser.RULE_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOption" ):
                listener.enterOption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOption" ):
                listener.exitOption(self)




    def option(self):

        localctx = NetworkParser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_option)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.s()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.sp()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.d()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 26
                self.dp()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 27
                self.fc()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 28
                self.ec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IPSUBNET(self, i:int=None):
            if i is None:
                return self.getTokens(NetworkParser.IPSUBNET)
            else:
                return self.getToken(NetworkParser.IPSUBNET, i)

        def IP(self, i:int=None):
            if i is None:
                return self.getTokens(NetworkParser.IP)
            else:
                return self.getToken(NetworkParser.IP, i)

        def getRuleIndex(self):
            return NetworkParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = NetworkParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_s)
        self._la = 0 # Token type
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.match(NetworkParser.T__0)
                self.state = 32
                self.match(NetworkParser.IPSUBNET)
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 33
                    self.match(NetworkParser.T__1)
                    self.state = 34
                    self.match(NetworkParser.IPSUBNET)
                    self.state = 39
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.match(NetworkParser.T__0)
                self.state = 41
                self.match(NetworkParser.IP)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 42
                    self.match(NetworkParser.T__1)
                    self.state = 43
                    self.match(NetworkParser.IP)
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(NetworkParser.INT, 0)

        def getRuleIndex(self):
            return NetworkParser.RULE_sp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSp" ):
                listener.enterSp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSp" ):
                listener.exitSp(self)




    def sp(self):

        localctx = NetworkParser.SpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(NetworkParser.T__2)
            self.state = 52
            self.match(NetworkParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IPSUBNET(self, i:int=None):
            if i is None:
                return self.getTokens(NetworkParser.IPSUBNET)
            else:
                return self.getToken(NetworkParser.IPSUBNET, i)

        def IP(self, i:int=None):
            if i is None:
                return self.getTokens(NetworkParser.IP)
            else:
                return self.getToken(NetworkParser.IP, i)

        def getRuleIndex(self):
            return NetworkParser.RULE_d

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterD" ):
                listener.enterD(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitD" ):
                listener.exitD(self)




    def d(self):

        localctx = NetworkParser.DContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_d)
        self._la = 0 # Token type
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.match(NetworkParser.T__3)
                self.state = 55
                self.match(NetworkParser.IPSUBNET)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 56
                    self.match(NetworkParser.T__1)
                    self.state = 57
                    self.match(NetworkParser.IPSUBNET)
                    self.state = 62
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(NetworkParser.T__3)
                self.state = 64
                self.match(NetworkParser.IP)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 65
                    self.match(NetworkParser.T__1)
                    self.state = 66
                    self.match(NetworkParser.IP)
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(NetworkParser.INT, 0)

        def getRuleIndex(self):
            return NetworkParser.RULE_dp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDp" ):
                listener.enterDp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDp" ):
                listener.exitDp(self)




    def dp(self):

        localctx = NetworkParser.DpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(NetworkParser.T__4)
            self.state = 75
            self.match(NetworkParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(NetworkParser.INT, 0)

        def getRuleIndex(self):
            return NetworkParser.RULE_fc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFc" ):
                listener.enterFc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFc" ):
                listener.exitFc(self)




    def fc(self):

        localctx = NetworkParser.FcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(NetworkParser.T__5)
            self.state = 78
            self.match(NetworkParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(NetworkParser.INT, 0)

        def getRuleIndex(self):
            return NetworkParser.RULE_ec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEc" ):
                listener.enterEc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEc" ):
                listener.exitEc(self)




    def ec(self):

        localctx = NetworkParser.EcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(NetworkParser.T__6)
            self.state = 81
            self.match(NetworkParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





